# cargo-features = ["bindeps"]

[workspace]
default-members = [".", "rpc", "cli"]
members = [".", "rpc", "cli"]

[package]
name = "lnpbp_nodes"
description = "Umbrella package for installing all LNP/BP nodes"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["bitcoin", "node", "layer-2", "smart-contracts", "rgb"]
categories = ["network-programming"]
version = "0.8.0-rc.1"
edition = "2021"
rust-version = "1.59.0"
readme = "README.md"
exclude = [".github", "Dockerfile", ".dockerignore", "doc"]

[lib]
name = "lnpbp_nodes"

[[bin]]
name = "bpd"

[[bin]]
name = "lnpd"

[[bin]]
name = "peerd"

[[bin]]
name = "channeld"

[[bin]]
name = "routed"

[[bin]]
name = "rgbd"

[[bin]]
name = "bucketd"

[[bin]]
name = "stormd"

[[bin]]
name = "transferd"

[[bin]]
name = "chatd"

[[bin]]
name = "downpourd"

[[bin]]
name = "stored"

[dependencies]
bp_node = { version = "0.8.0-alpha.2", artifact = "bin", lib = true }
lnp_node = { version = "0.8.0", artifact = "bin", lib = true, features = ["all"] }
rgb_node = { version = "0.8.0-rc.1", artifact = "bin", lib = true }
storm_node = { version = "0.8.0-beta.1", artifact = "bin", lib = true }
store_daemon = { version = "0.8.0", artifact = "bin", lib = true }
