[package]
name = "lnpbp-cli"
description = "Umbrella package for LNP/BP nodes command-line tools"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["bitcoin", "node", "layer-2", "smart-contracts", "rgb"]
categories = ["network-programming"]
version = "0.8.0-alpha.1"
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"
exclude = [".github", "Dockerfile", ".dockerignore", "doc", "shell"]

[[bin]]
name = "bp-cli"

[[bin]]
name = "lnp-cli"

[[bin]]
name = "rgb-cli"

[[bin]]
name = "storm-cli"

[[bin]]
name = "store-cli"

[dependencies]
bp-cli = { version = "0.8.0-alpha.1", git = "https://github.com/BP-WG/bp-node", artifact = "bin" }
lnp-cli = { version = "0.8.0-rc.1", git = "https://github.com/LNP-WG/lnp-node", artifact = "bin" }
rgb-cli = { version = "0.8.0-beta.2", git = "https://github.com/RGB-WG/rgb-node", artifact = "bin" }
storm-cli = { version = "0.8.0-beta.1", git = "https://github.com/Storm-WG/storm-node", artifact = "bin" }
store-cli = { version = "0.8.0-rc.5", git = "https://github.com/Storm-WG/storm-stored", artifact = "bin" }
