[package]
name = "cvpd"
version = "0.1.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Deamon for client-side validation peer communications"
keywords = ["bitcoin", "lightning", "cryptography"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "cvpd"
path = "src/main.rs"

[dependencies]
lnpbp = { git = "https://github.com/lnp-bp/rust-lnpbp.git" }
zmq = "~0.9"
log = "~0.4"
env_logger = "~0.7"
toml = "~0.5"
serde = "~1.0"
serde_derive = "~1.0"

[dependencies.secp256k1]
version = "~0.15"
features = [ "serde" ]

[dependencies.clap]
version = "~2.33"
default-features = true
features = [ "yaml" ]
