[package]
name = "____"
version = "0.1.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Deamon for ____ from the set of LNP/BP daemons"
keywords = ["bitcoin", "lightning", "cryptography"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "_____"
path = "src/main.rs"

[dependencies]
bitcoin = { git = "https://github.com/pandoracore/rust-bitcoin.git", branch = "develop" }
bitcoin_hashes = { git = "https://github.com/pandoracore/bitcoin_hashes.git", branch = "hashnewtype-fix" }
lnpbp = { git = "https://github.com/lnp-bp/rust-lnpbp.git" }
