[package]
name = "stated"
version = "0.1.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Deamon for ____ from the set of LNP/BP daemons"
keywords = ["bitcoin", "lightning", "cryptography"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "stated"
path = "src/main.rs"

[dependencies]
lnpbp = { git = "https://github.com/lnp-bp/rust-lnpbp.git" }
